--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="mdui-toolbar mdui-color-theme">
       <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
       <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
-      <a href="javascript:;" class="mdui-typo-title">Windows</a>
+      <a href="javascript:;" class="mdui-typo-title">Website</a>
       <div class="mdui-toolbar-spacer"></div>
       <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
       <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
@@ -35,15 +35,17 @@
     <p>地铁计算器，从♥出发</p>
     <div class="p">
       <h2 mdui-tooltip="{content: '每3个月更新一次'}">地铁计算器下载</h2>
-      <button class="mdui-btn mdui-color-theme-accent mdui-ripple" disabled>21H1</button>
-      <h3>早期预览版</h3>
+      <button class="mdui-btn mdui-color-theme-accent mdui-ripple" onclick="window.location.href = 'https://github.com/BSOD-qian/stdesktop'" disabled>21H1</button>
+      <h2 mdui-tooltip="{content: '每3个月更新一次'}">地铁计算器网页版</h2>
+      <button class="mdui-btn mdui-color-theme-accent mdui-ripple" onclick="window.location.href = 'https://BSOD-qian.github.io/st'">GO!</button>
+      <h2>早期预览版</h2>
       <p>这里包含了一些最近的更改，通常不稳定（比如随时随地都可能被砍掉）</p>
       <span mdui-tooltip="{content: '每1个月更新一次'}">Beta</span><br/>
-      <button class="mdui-btn mdui-color-theme-accent mdui-ripple" disabled>2101</button><br />
+      <button class="mdui-btn mdui-color-theme-accent mdui-ripple" onclick="window.location.href = 'https://github.com/BSOD-qian/stdesktop'" disabled>2101</button><br />
       <span mdui-tooltip="{content: '每1周更新一次'}">Dev</span><br/>
-      <button class="mdui-btn mdui-color-theme-accent mdui-ripple">20210124</button><br />
+      <button class="mdui-btn mdui-color-theme-accent mdui-ripple" onclick="window.location.href = 'https://github.com/BSOD-qian/stdesktop'">20210124</button><br />
       <span mdui-tooltip="{content: '每天更新一次'}">Canary</span><br/>
-      <button class="mdui-btn mdui-color-theme-accent mdui-ripple">20210124</button>
+      <button class="mdui-btn mdui-color-theme-accent mdui-ripple" onclick="window.location.href = 'https://github.com/BSOD-qian/stdesktop'">20210125</button>
     </div>
   </div>
   <style>
